force-app/main/default/objects/ToolExecution__c/ToolExecution__c.object-meta.xml
<CustomObject>
    <description>Tracked tool invocation within a run.</description>
    <label>Tool Execution</label>
    <nameField>
        <displayFormat>TOOL-{000000}</displayFormat>
        <label>Tool Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tool Executions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>