force-app/main/default/objects/ToolExecution__c/fields/InputJson__c.field-meta.xml
<CustomField>
    <fullName>InputJson__c</fullName>
    <label>Input Json</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>