force-app/main/default/objects/ToolExecution__c/fields/OutputJson__c.field-meta.xml
<CustomField>
    <fullName>OutputJson__c</fullName>
    <label>Output Json</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>