force-app/main/default/objects/ToolExecution__c/fields/Run__c.field-meta.xml
<CustomField>
    <fullName>Run__c</fullName>
    <label>Run</label>
    <referenceTo>Run__c</referenceTo>
    <relationshipLabel>Tool Executions</relationshipLabel>
    <relationshipName>ToolExecutions</relationshipName>
    <type>MasterDetail</type>
</CustomField>